--- a/PluginTemplate/PROPERTIES/launchSettings.json
+++ b/PluginTemplate/PROPERTIES/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "ClasssIsland 插件": {
+    "ClassIsland 插件": {
       "commandName": "Executable",
       "executablePath": "$(ClassIsland_DebugBinaryFile)",
       "commandLineArgs": "-epp $(TargetDir)",
